# ms-knowledge-base

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
config/: settings.py
scripts/: ingest.py  serve.py  split_pdf.py
specs/: CLAUDE_CODE_INSTRUCTIONS.md  architecture.md  ingestion-spec.md  mcp-server-spec.md
src/ms_knowledge_base/db/: operations.py  schema.py
src/ms_knowledge_base/ingest/: chunker.py  embedder.py  pdf_reader.py  pipeline.py
src/ms_knowledge_base/server/: auth.py  main.py  search.py  tools.py
tests/: test_auth.py  test_chunker.py  test_db.py  test_integration.py  test_search.py  test_tools.py
